--- a/apps/webapp/src/styles.css
+++ b/apps/webapp/src/styles.css
@@ -1,7 +1,10 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
-/* @plugin 'tailwind-scrollbar'; */
+@tailwind utilities; */
+
+@import 'tailwindcss';
+@plugin 'tailwind-scrollbar';
+
 /* You can add global styles to this file, and also import other style files */
 
 :root,
